test/fail/NegPol.ma
-- 2010-08-19
let U : +Set -> Set
      = \ X -> X -> X

